// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`telemetry > should not record telemetry inputs / outputs when disabled 1`] = `
[
  {
    "attributes": {
      "ai.model.id": "mock-model-id",
      "ai.model.provider": "mock-provider",
      "ai.operationId": "ai.rerank",
      "ai.usage.tokens": 10,
      "operation.name": "ai.rerank",
    },
    "events": [],
    "name": "ai.rerank",
  },
  {
    "attributes": {
      "ai.model.id": "mock-model-id",
      "ai.model.provider": "mock-provider",
      "ai.operationId": "ai.rerank.doRerank",
      "ai.usage.tokens": 10,
      "operation.name": "ai.rerank.doRerank",
    },
    "events": [],
    "name": "ai.rerank.doRerank",
  },
]
`;

exports[`telemetry > should record telemetry data when enabled (multiple calls path) 1`] = `
[
  {
    "attributes": {
      "ai.model.id": "mock-model-id",
      "ai.model.provider": "mock-provider",
      "ai.operationId": "ai.rerank",
      "ai.rerankedDocuments": "[]",
      "ai.rerankedIndices": "[1,0]",
      "ai.telemetry.functionId": "test-function-id",
      "ai.telemetry.metadata.test1": "value1",
      "ai.telemetry.metadata.test2": false,
      "ai.usage.tokens": 20,
      "ai.values": "["sunny day at the beach","rainy day in the city"]",
      "operation.name": "ai.rerank test-function-id",
      "resource.name": "test-function-id",
    },
    "events": [],
    "name": "ai.rerank",
  },
  {
    "attributes": {
      "ai.model.id": "mock-model-id",
      "ai.model.provider": "mock-provider",
      "ai.operationId": "ai.rerank.doRerank",
      "ai.rerankedDocuments": "[]",
      "ai.rerankedIndices": "[1]",
      "ai.telemetry.functionId": "test-function-id",
      "ai.telemetry.metadata.test1": "value1",
      "ai.telemetry.metadata.test2": false,
      "ai.usage.tokens": 10,
      "ai.values": [
        "["sunny day at the beach"]",
      ],
      "operation.name": "ai.rerank.doRerank test-function-id",
      "resource.name": "test-function-id",
    },
    "events": [],
    "name": "ai.rerank.doRerank",
  },
  {
    "attributes": {
      "ai.model.id": "mock-model-id",
      "ai.model.provider": "mock-provider",
      "ai.operationId": "ai.rerank.doRerank",
      "ai.rerankedDocuments": "[]",
      "ai.rerankedIndices": "[0]",
      "ai.telemetry.functionId": "test-function-id",
      "ai.telemetry.metadata.test1": "value1",
      "ai.telemetry.metadata.test2": false,
      "ai.usage.tokens": 10,
      "ai.values": [
        "["rainy day in the city"]",
      ],
      "operation.name": "ai.rerank.doRerank test-function-id",
      "resource.name": "test-function-id",
    },
    "events": [],
    "name": "ai.rerank.doRerank",
  },
]
`;

exports[`telemetry > should record telemetry data when enabled (single call path) 1`] = `
[
  {
    "attributes": {
      "ai.model.id": "mock-model-id",
      "ai.model.provider": "mock-provider",
      "ai.operationId": "ai.rerank",
      "ai.rerankedDocuments": "["rainy day in the city","sunny day at the beach"]",
      "ai.rerankedIndices": "[1,0]",
      "ai.telemetry.functionId": "test-function-id",
      "ai.telemetry.metadata.test1": "value1",
      "ai.telemetry.metadata.test2": false,
      "ai.usage.tokens": 10,
      "ai.values": "["sunny day at the beach","rainy day in the city"]",
      "operation.name": "ai.rerank test-function-id",
      "resource.name": "test-function-id",
    },
    "events": [],
    "name": "ai.rerank",
  },
  {
    "attributes": {
      "ai.model.id": "mock-model-id",
      "ai.model.provider": "mock-provider",
      "ai.operationId": "ai.rerank.doRerank",
      "ai.rerankedDocuments": "["rainy day in the city","sunny day at the beach"]",
      "ai.rerankedIndices": "[1,0]",
      "ai.telemetry.functionId": "test-function-id",
      "ai.telemetry.metadata.test1": "value1",
      "ai.telemetry.metadata.test2": false,
      "ai.usage.tokens": 10,
      "ai.values": [
        "["sunny day at the beach","rainy day in the city"]",
      ],
      "operation.name": "ai.rerank.doRerank test-function-id",
      "resource.name": "test-function-id",
    },
    "events": [],
    "name": "ai.rerank.doRerank",
  },
]
`;
